# High-performance-2D-Ising-Model-Engine

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md
analysis/: analyze_scaling.py  visualize.py
src/: Lattice.cpp  Lattice.h  main.cpp
